# agenticevals

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agenticevals/: __init__.py  authoring.py  baselines.py  calibration.py  canonical.py  cli.py  config.py  data_loop.py  environment_baselines.py  export.py  failures.py  model_io.py  recompute.py  release_gate.py  review_cli.py  run_store.py  runner.py  schema.py  stats.py  suites.py  tool_parsers.py  trace.py  trace_ingest.py  trajectory_export.py  trajectory_schema.py  trajectory_validate.py  trials.py  utils.py  verify.py  viewer.py  workspace.py
agenticevals/agents/: __init__.py  base.py  builtin_tools.py  claude_loop.py  command.py  direct_model.py  factory.py  http_agent.py  model_loop.py  native_tools.py  noop.py  scripted.py
agenticevals/backends/: __init__.py  base.py  docker.py  factory.py  local.py  sandbox_http.py
agenticevals/computer/: __init__.py  browser.py  context.py  files.py  shell.py
agenticevals/environments/: __init__.py  base.py
agenticevals/reporting/: __init__.py  html.py
docs/: agent-adapters.md  architecture.md  task-schema.md
scripts/: check-public-language.sh  run-sample.sh
tests/: test_claude_agent.py  test_determinism.py  test_dimensions.py  test_export.py  test_llm_rubric.py  test_model_io.py  test_native_agents.py  test_packaging.py  test_release_metrics.py  test_runner.py  test_sandbox.py  test_scoring.py  test_stats.py  test_task_schema.py  test_tools.py  test_trajectory_schema.py  test_trials.py  test_verifiers.py
(+68 files in other folders)
