[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticevals"
version = "0.1.0"
description = "Trajectory-based evaluation framework for AI agents operating controlled computer environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agenticevals contributors" }]
keywords = ["agents", "evals", "benchmarks", "trajectories", "codex", "claude", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
agenticevals = "agenticevals.cli:main"

[tool.setuptools.packages.find]
include = ["agenticevals*", "examples*"]

[tool.setuptools.package-data]
agenticevals = ["bundled/**"]
examples = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "**/__pycache__/*", "*.pyc", "**/*.pyc", "*.pyo", "**/*.pyo"]
